35289 allow to index reverse external relationships (#171)
* refactored configs to make it easier to index reverse relationships
* renamed endpointDescriptor to IndexSettingDescriptor
* Started reverse relationship indexing
* Added code for get by filter
* Added call to processReverseRelationships
* Fixed filter urlBuilder so it uses the key and value.
* addPathSegement on empty documentId would result in filter being added after an empty path (generic-molecular-analysis-run-item/? vs generic-molecular-analysis-run-item?)
* Added OM configuration for now, can be removed if in the JsonApiDocument.
* Changed the endpoint variable to be specific to the resource (similar to person), this could be refactored so the environment variables just have the API hosts so we don't need to create a new one for each endpoint
* Improved the endpoints to just use module apis. Will need to update the local deployment.
* Implemented logic to iterate through the reverse relationships found, and add each to the included section of the document.
* Fixed the endpoints for the right type and removed "/v1" for the seqdb one.
* In processReverseRelationships the ".id" part is no longer included, if needed it can be added in the relationship name in the endpoint config.
* Removed endpoints specific to run-summary as this will be implemented in another ticket.
*  Bumped version to the to be released next version of dina base.
* New functions for JsonApiDocument and no longer need to configure the object mapper to ignore fields.
* Short term fix for the included part being parsed

---------

Co-authored-by: @cgendreau